cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_181.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/dhparam.c:144: error: DEAD_STORE
  The value written to &argc (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/dhparam.c:144:5: Write of unused value
142.           }
143.       }
144.       argc = opt_num_rest();
           ^
145.       argv = opt_rest();
146.   
